--- a/src/components/Body.module.css
+++ b/src/components/Body.module.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    width: 900px;
 }
 
 @media (max-width: 770px) {
