--- a/src/components/Body.module.css
+++ b/src/components/Body.module.css
@@ -2,17 +2,14 @@ body {
     background-color: rgb(250, 250, 250);
 }
 
-.owbody {
-    background-color: rgb(52,58,72);
-}
-
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 20px;
+    padding: 10px;
     width: 100%;
+    height: 900px;
 }
 
 @media (max-width: 770px) {
